src/objects/AB2__AdBookOrderSynchronizationQueue__c.object
<CustomObject>
    <description>Records will be processed by a batch job to synch to AdBook</description>
    <fields>
        <fullName>AB2__DateTimeProcessed__c</fullName>
        <description>The date and time that the record was processed for synchronisation.</description>
        <label>Date Time Processed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AB2__Error__c</fullName>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AB2__JobId__c</fullName>
        <description>The Job ID that synched the record.</description>
        <label>Job ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__LimitedSync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the drops will not be synced to AdBook.</description>
        <inlineHelpText>When checked the drops will not be synced to AdBook.</inlineHelpText>
        <label>Limited Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__Opportunity__c</fullName>
        <description>The Opportunity to be synched.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Adbook_Order_Synchronization_Queues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>AdBook Order Synchronization Queue</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AdBook Order Synchronization Queues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>